--- a/index (1).html
+++ b/index (1).html
@@ -62,7 +62,7 @@
     </div>
 
     <footer class="site-footer">
-      <p>Copyright &copy; 2021 by  <a href="1vuXhl6Nfs3VMz8qqXjfye8RBeEWhUbx91-A_3UuVoRo/">NCUT</a> | NCUT Shopping Cart</p>
+      <p>Copyright &copy; 2021 by  <a href="http://www.ncut.edu.tw/">NCUT</a> | NCUT Shopping Cart</p>
     </footer>
 
     <script src="js/jquery-1.11.3.min.js"></script>
